--- a/IPAddressTracker/AngularV/src/index.html
+++ b/IPAddressTracker/AngularV/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <!--Leaflet -->
 </head>
 <body>
   <app-root></app-root>
